--- a/your_code/main.ipynb
+++ b/your_code/main.ipynb
@@ -1706,15 +1706,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>founded_year</th>\n",
+       "      <th>acquisition.acquired_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>StumbleUpon</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Gizmoz</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Helio</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Joost</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plaxo</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name  founded_year  acquisition.acquired_year\n",
+       "0  StumbleUpon          2002                       2009\n",
+       "1       Gizmoz          2003                       2009\n",
+       "2        Helio          2005                       2008\n",
+       "3        Joost          2006                       2009\n",
+       "4        Plaxo          2002                       2008"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your Code\n",
-    "ejer18=collection.find('$and':[{'founded_year': {{'$gte': 2000},{'$lte': 2010}}, {'_id': False, 'name':True, 'acquisition.price_amount':1}).limit(10)\n",
+    "ejer19=collection.find({'$and':[{'founded_year': {'$gte': 2000, '$lte': 2010}}, {'acquisition.acquired_year':{'$lt':2011}}]}, {'_id': False, 'name':True, 'acquisition.acquired_year':1, 'founded_year':1})\n",
     "\n",
-    "df18=pd.json_normalize(ejer18)\n",
-    "df18.head()"
+    "df19=pd.json_normalize(ejer19)\n",
+    "df19.head()"
    ]
   },
   {
@@ -1726,11 +1801,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>deadpooled_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Omnidrive</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Babelgum</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sparter</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thoof</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mercora</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        name  deadpooled_year\n",
+       "0  Omnidrive             2008\n",
+       "1   Babelgum             2013\n",
+       "2    Sparter             2008\n",
+       "3      Thoof             2013\n",
+       "4    Mercora             2008"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your Code"
+    "# Your Code\n",
+    "ejer20=collection.find({'deadpooled_year': {'$gt': 3}}, {'_id': False, 'name':True, 'deadpooled_year':1})\n",
+    "\n",
+    "df20=pd.json_normalize(ejer20)\n",
+    "df20.head()"
    ]
   }
  ],
